my-base-apps/apps/ansibleui/base/redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirectscheme
spec:
  redirectScheme:
    permanent: true
    scheme: https
