my-base-apps/apps/ansibleui/base/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore-mysql
  labels:
    app: semaphore
spec:
  ports:
    - port: 3306
  selector:
    app: semaphore
    tier: mysql
  clusterIP: None
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mysql-pv-claim
#   labels:
#     app: semaphore
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore-mysql
  labels:
    app: semaphore
spec:
  selector:
    matchLabels:
      app: semaphore
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: semaphore
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
      #   volumeMounts:
      #   - name: mysql-persistent-storage
      #     mountPath: /var/lib/mysql
      # volumes:
      # - name: mysql-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: mysql-pv-claim
