my-base-apps/apps/ansibleui/base/semaphore-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore
  labels:
    app: semaphore
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`semaphore.softimiz-cloud.com`)
      kind: Rule
      services:
        - name: semaphore
          port: 3000
      middlewares:
        - name: https-redirectscheme
  tls:
    secretName: semaphore.softimiz-cloud.com
